# evalcraft

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  action.yml  docker-compose.production.yml  docker-compose.yml  index.html  launch-posts.md  mkdocs.yml  pyproject.toml  sitemap.xml  thank-you.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design-partner-feedback.md  feature_request.yml
.github/workflows/: ci.yml  publish.yml
dashboard/backend/: Dockerfile  alembic.ini  entrypoint.sh  requirements.txt
dashboard/backend/alembic/: env.py
dashboard/backend/alembic/versions/: 001_initial.py
dashboard/backend/app/: cache.py  config.py  database.py  logging_config.py  main.py
dashboard/backend/app/api/: auth.py  cassettes.py  golden_sets.py  projects.py  regressions.py  webhooks.py
dashboard/backend/app/models/: __init__.py  cassette.py  golden_set.py  project.py  regression.py  user.py
dashboard/backend/app/schemas/: api.py
dashboard/backend/app/services/: alert_service.py  analytics_service.py  cassette_service.py  regression_service.py
dashboard/backend/tests/: conftest.py  test_auth.py  test_cassettes.py  test_golden_sets.py  test_projects.py  test_regressions.py  test_webhooks.py
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/src/: App.tsx  index.css
dashboard/frontend/src/__tests__/: ErrorBoundary.test.tsx  Skeleton.test.tsx  api.test.ts
docs/: 404.html  index.html  index.md  sitemap.xml
docs/blog/01_your_agents_are_untested/: index.html
docs/launch/discord_announcement/: index.html
docs/launch/product_hunt_draft/: index.html
docs/launch/reddit_posts/: index.html
docs/launch/show_hn_final/: index.html
docs/launch/twitter_threads/: index.html
docs/search/: search_index.json
docs/strategy/01_competitive_analysis/: index.html
docs/strategy/02_technical_architecture/: index.html
docs/strategy/03_business_model/: index.html
docs/strategy/04_product_requirements/: index.html
docs/strategy/05_market_analysis/: index.html
docs/strategy/06_brand_and_launch/: index.html
docs/strategy/07_risk_and_operations/: index.html
docs/strategy/hn_launch_post/: index.html
docs/user-guide/: capture.md  changelog.md  check-stale.md  ci-cd.md  cli.md  concepts.md  five-minute-case-study.md  index.html  index.md  live-eval.md  loop-detection.md  mock.md  pytest-plugin.md  quickstart.md  replay.md  scorers.md  structured-output.md
docs/user-guide/adapters/: anthropic.md  crewai.md  langgraph.md  openai.md
docs/user-guide/capture/: index.html
docs/user-guide/changelog/: index.html
docs/user-guide/check-stale/: index.html
docs/user-guide/ci-cd/: index.html
docs/user-guide/cli/: index.html
docs/user-guide/concepts/: index.html
docs/user-guide/five-minute-case-study/: index.html
docs/user-guide/live-eval/: index.html
docs/user-guide/loop-detection/: index.html
docs/user-guide/mock/: index.html
docs/user-guide/pytest-plugin/: index.html
docs/user-guide/quickstart/: index.html
docs/user-guide/replay/: index.html
docs/user-guide/scorers/: index.html
docs/user-guide/structured-output/: index.html
evalcraft/: __init__.py
evalcraft/adapters/: __init__.py  anthropic_adapter.py  autogen_adapter.py  crewai_adapter.py  gemini_adapter.py  langgraph_adapter.py  llamaindex_adapter.py  openai_adapter.py  pydantic_ai_adapter.py
evalcraft/alerts/: __init__.py  email.py  slack.py  webhook.py
evalcraft/capture/: recorder.py
evalcraft/cli/: doctor_cmd.py  generate_cmd.py  init_cmd.py  main.py
evalcraft/cli/templates/: __init__.py  conftest.py  evalcraft.toml  test_agent_anthropic.py  test_agent_crewai.py  test_agent_generic.py  test_agent_langgraph.py  test_agent_openai.py
evalcraft/cloud/: __init__.py  client.py
evalcraft/core/: models.py
evalcraft/eval/: __init__.py  _utils.py  hallucination.py  judge_cache.py  jury.py  live.py  llm_judge.py  loops.py  pairwise.py  rag_scorers.py  statistical.py
evalcraft/eval/scorers/: __init__.py  _jsonschema.py  structured.py
evalcraft/golden/: __init__.py  manager.py
evalcraft/mock/: llm.py  tool.py
evalcraft/pytest_plugin/: __init__.py  plugin.py
evalcraft/regression/: __init__.py  detector.py  trend.py
evalcraft/replay/: engine.py  network_guard.py
evalcraft/sanitize/: __init__.py  redactor.py
evalcraft/staleness/: __init__.py  checker.py
examples/: basic_capture.py  example-ci-gate.yml  replay_and_diff.py  test_with_mocks.py
examples/anthropic-agent/: README.md  agent.py  record_cassettes.py  requirements.txt
examples/anthropic-agent/tests/: test_code_review_agent.py
examples/ci-pipeline/: README.md  evalcraft-ci.yml  evalcraft_gate.py  requirements.txt
examples/ci-pipeline/tests/: test_ci_gate.py
examples/langgraph-workflow/: README.md  record_cassettes.py  requirements.txt  workflow.py
examples/langgraph-workflow/tests/: test_rag_workflow.py
examples/openai-agent/: README.md  agent.py  build_golden.py  record_cassettes.py  requirements.txt
examples/openai-agent/tests/: test_golden.py  test_support_agent.py
launch/: dm-templates.md  outreach-targets.md  outreach-tracker.md  reddit-langchain.md  reddit-python.md  show-hn.md  tracking-dashboard.md  twitter-thread.md
scripts/: seed_demo.py  smoke_test.py  validate_with_openai.py
site/: CNAME  index.html  robots.txt
tests/: conftest.py  test_alerts.py  test_anthropic_adapter.py  test_check_stale.py  test_cloud.py  test_doctor.py  test_e2e_pipeline.py  test_gemini_adapter.py  test_generate_tests.py  test_golden.py  test_hallucination.py  test_init.py  test_judge_cache.py  test_jury.py  test_live_eval.py  test_llm_judge.py  test_mock_llm.py  test_mock_tool.py  test_models.py  test_network_guard.py  test_pairwise.py  test_provenance.py  test_pydantic_ai_adapter.py  test_rag_scorers.py  test_recorder.py  test_regression.py  test_replay.py  test_sanitize.py  test_scorer_offline.py  test_scorers.py  test_scorers_loops.py  test_scorers_structured.py  test_statistical.py
tests/regression/: test_trend_detector.py
(+35 files in other folders)
