[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalcraft"
version = "0.1.0"
description = "The pytest for AI agents — capture, replay, mock, and evaluate agent behavior."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Evalcraft Team" },
]
keywords = ["ai", "agents", "testing", "evaluation", "llm", "pytest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
pytest = ["pytest>=7.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.28"]
autogen = ["pyautogen>=0.2"]
llamaindex = ["llama-index-core>=0.10"]
gemini = ["google-generativeai>=0.5"]
all = [
    "pytest>=7.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "langchain-core>=0.2",
    "crewai>=0.28",
    "pyautogen>=0.2",
    "llama-index-core>=0.10",
    "google-generativeai>=0.5",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[project.scripts]
evalcraft = "evalcraft.cli.main:cli"

[project.entry-points.pytest11]
evalcraft = "evalcraft.pytest_plugin.plugin"

[project.urls]
Homepage = "https://github.com/beyhangl/evalcraft"
Repository = "https://github.com/beyhangl/evalcraft"
Documentation = "https://evalcraft.dev"
Issues = "https://github.com/beyhangl/evalcraft/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["evalcraft"]
