[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalcraft"
version = "0.1.0"
description = "The pytest for AI agents — capture, replay, mock, and evaluate agent behavior."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Evalcraft Team" },
]
keywords = ["ai", "agents", "testing", "evaluation", "llm", "pytest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
pytest = ["pytest>=7.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.28"]
autogen = ["pyautogen>=0.2"]
llamaindex = ["llama-index-core>=0.10"]
gemini = ["google-generativeai>=0.5"]
pydantic-ai = ["pydantic-ai>=0.0.30"]
all = [
    "pytest>=7.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "langchain-core>=0.2",
    "crewai>=0.28",
    "pyautogen>=0.2",
    "llama-index-core>=0.10",
    "google-generativeai>=0.5",
    "pydantic-ai>=0.0.30",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[project.scripts]
evalcraft = "evalcraft.cli.main:cli"

[project.entry-points.pytest11]
evalcraft = "evalcraft.pytest_plugin.plugin"

[project.urls]
Homepage = "https://github.com/beyhangl/evalcraft"
Repository = "https://github.com/beyhangl/evalcraft"
Documentation = "https://beyhangl.github.io/evalcraft/"
Issues = "https://github.com/beyhangl/evalcraft/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    # N806/N803: the codebase intentionally binds class objects and SDK symbols
    # to PascalCase locals/args (e.g. dynamically-resolved `Messages`/`FakeAgent`
    # classes, `BaseCallbackHandler` passed as an arg) and declares function-local
    # constants in UPPER_CASE (`_STOPWORDS`, `_SEV_COLORS`). Lower-casing these
    # would be misleading, so these naming rules are disabled rather than churned.
    "N806",
    "N803",
    # SIM117/SIM105/SIM108: these flag established, intentional style — nested
    # `with` blocks in tests that read as setup-then-action, deliberate
    # best-effort `try/except/pass` swallows, and explicit if/else blocks. The
    # suggested rewrites (single `with`, `contextlib.suppress`, ternaries) are
    # cosmetic; ruff marks several as unsafe fixes because combining context
    # managers can change exit ordering. Disabled to avoid churn / behavior risk.
    "SIM117",
    "SIM105",
    "SIM108",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
# Optional framework adapters (crewai, autogen, llama_index, langchain, gemini,
# pydantic_ai, …) and some transitive deps ship no type stubs. Without this,
# mypy follows them into site-packages and even errors on their 3.10-only syntax
# under our 3.9 target, which aborts checking of our own code. Ignore missing
# third-party imports so mypy actually type-checks evalcraft/.
ignore_missing_imports = true
# The codebase deliberately uses bare `dict`/`list` annotations throughout.
# Enforcing parameterized generics would mean rewriting ~150 annotations across
# 56 files for no runtime benefit, so relax just this one strict sub-check to
# match the established style.
disallow_any_generics = false
# Optional-dependency `# type: ignore` comments are needed on machines where the
# adapter's SDK is absent, but look "unused" wherever the SDK *is* installed.
# Their necessity is environment-dependent, so don't flag them as unused.
warn_unused_ignores = false
# The library predates strict typing and doesn't annotate every internal helper,
# dunder, or `evalcraft init` scaffold function. Requiring full annotations /
# typed calls would mean annotating ~60 functions for no runtime benefit, so
# relax these sub-checks to the codebase's actual convention while keeping the
# rest of `strict` (None-safety, redundant casts, unreachable code, …) on.
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
# JSON-deserializing helpers (the cloud client, judge-response parsing) return
# values that are `Any` by nature (parsed JSON) but declare concrete result
# shapes for callers. Don't warn on returning Any from those typed signatures.
# (None-safety, strict-equality, redundant-cast, and no-return checks stay on.)
warn_return_any = false

# A few installed third-party packages (pulled in transitively by optional
# adapters) contain 3.10-only syntax or untyped internals that abort checking
# of our own code. Don't analyze their source — treat them as untyped.
[[tool.mypy.overrides]]
module = [
    "unstructured.*",
    "crewai.*",
    "autogen.*",
    "llama_index.*",
    "langchain.*",
    "langchain_core.*",
]
follow_imports = "skip"

# The framework adapters intentionally monkeypatch third-party SDK methods
# (e.g. `client.messages.create = patched`), which mypy cannot statically verify
# against the SDKs' precise signatures. These error codes fight that legitimate,
# dynamic pattern, so disable them for the adapters package only.
[[tool.mypy.overrides]]
module = ["evalcraft.adapters.*"]
disable_error_code = ["assignment", "attr-defined", "no-any-return", "no-untyped-call"]

[tool.hatch.build.targets.wheel]
packages = ["evalcraft"]
